# RangeNetCPU

./: CMakeLists.txt  README.md
Docker/: Dockerfile
include/: net.hpp
projection/Orthographic_projection/: README.txt  main.py
projection/spherical_projection/: main.py
src/: EXnet.cpp
